dark mode fixes

--- a/scss/_dark.scss
+++ b/scss/_dark.scss
@@ -1,11 +1,9 @@
 // stylelint-disable declaration-no-important
 
-$dark-text: $light;
-
 @include dark-mode {
   & {
-    color: $dark-text;
-    background: $dark-darken;
+    color: $dark-mode-text;
+    background-color: $dark-mode-darken;
   }
 
   .card,
@@ -13,7 +11,7 @@ $dark-text: $light;
   .footer,
   .modal-content,
   .modal-header {
-    background: $dark;
+    background-color: $dark;
     color: inherit;
   }
 
@@ -23,7 +21,7 @@ $dark-text: $light;
 
   .btn-secondary,
   .form-file-button {
-    @include button-variant($dark-lighten, $border-color, $dark-text, rgba($dark, 0), $border-color, $dark-text);
+    @include button-variant($dark-mode-lighten, $border-color, $dark-mode-text, rgba($dark, 0), $border-color, $dark-mode-text);
     background-image: none;
   }
 
@@ -35,28 +33,28 @@ $dark-text: $light;
   .flatpickr-input.flatpickr-input,
   .form-selectgroup-check,
   .form-imagecheck-figure:before {
-    background-color: $dark-darken;
-    color: $dark-text;
+    background-color: $dark-mode-darken;
+    color: $dark-mode-text;
   }
 
   .form-control-plaintext {
-    color: $dark-text;
+    color: $dark-mode-text;
   }
 
   .input-group-flat .input-group-text {
-    background-color: $dark-darken;
+    background-color: $dark-mode-darken;
   }
 
   .navbar {
-    box-shadow: 0 0 0 1px $dark-darken;
+    box-shadow: 0 0 0 1px $dark-mode-darken;
   }
 
   .highlight {
-    background-color: $dark-darken;
+    background-color: $dark-mode-darken;
   }
 
   .avatar {
-    background-color: $dark-lighten;
+    background-color: $dark-mode-lighten;
   }
 
   .avatar-list-stacked .avatar {
@@ -70,7 +68,7 @@ $dark-text: $light;
   }
 
   .apexcharts-text {
-    fill: $dark-text;
+    fill: $dark-mode-text;
   }
 
   .apexcharts-legend-text {
