--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -17,9 +17,6 @@ $theme-color-interval: 10% !default;
 $light: #f5f7fb !default;
 $dark: #354052 !default;
 
-$dark-darken: darken($dark, 3%) !default;
-$dark-lighten: lighten($dark, 3%) !default;
-
 $light-black: rgba($dark, .24) !default;
 $light-mix: rgba(mix($light, $dark, 64%), .24) !default;
 $light-white: rgba($light, .24) !default;
@@ -106,6 +103,15 @@ $colors: (
   "gray-dark": $gray-800,
   "dark": $dark
 ) !default;
+
+
+/**
+Dark mode
+ */
+
+$dark-mode-darken: darken($dark, 3%) !default;
+$dark-mode-lighten: lighten($dark, 3%) !default;
+$dark-mode-text: $light;
 
 $avatar-sizes: (
   "sm": 1.5rem,
