--- a/scss/demo/_examples.scss
+++ b/scss/demo/_examples.scss
@@ -19,7 +19,6 @@
 
 .example-content {
   font-size: $font-size-base;
-  color: $body-color;
   flex: 1;
   max-width: 100%;
 }
@@ -56,4 +55,11 @@
 
 .example-column-2 {
   max-width: 40rem;
+}
+
+@include dark-mode {
+  .example-code {
+    border: 1px solid $border-color;
+    border-top: none;
+  }
 }
