--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -384,7 +384,7 @@ Navbar colors
 .navbar-dark {
   background: $sidenav-dark-bg;
   color: $sidenav-dark-color;
-  box-shadow: 0 0 0 1px $dark-darken;
+  box-shadow: 0 0 0 1px $dark-mode-darken;
   @include scrollbar(true);
 
   .text-muted {
