--- a/scss/ui/_breadcrumbs.scss
+++ b/scss/ui/_breadcrumbs.scss
@@ -27,6 +27,6 @@
   }
 
   .breadcrumb-item.active {
-    color: $body-color;
+    color: inherit;
   }
 }
